<resources>
    <string name="app_name">CountMyCrunch</string>
    <string name="string_age">Enter your age in Years</string>
    <string name="string_weight">Enter your Weight in Kg</string>
    <string name="inches">inches</string>
    <string name="height_in_ft">Height in ft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Activity_level">Choose Activity Level</string>
    <string name="calculate">CALCULATE</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="bmi_table_for_adults">BMI table for adults</string>
    <string name="delete">Delete</string>
    <string name="submit">SUBMIT</string>
    <string name="bmi">BMI=</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>

    <!--  UI Dashboard  -->
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calorie_counter">Calorie Counter</string>
    <string name="foodzee">Foodie</string>
    <string name="health_vlogs">Health Vlogs</string>
    <string name="stopwatch">Chronometer</string>
    <string name="calorie_tracker">Calorie Tracker</string>


    <!--  Calorie Counter Fields  -->
    <string-array name="Activity_Level">
        <item>Sedentary(little or no exercise)</item>
        <item>Light(exercise 1–3 times/week)</item>
        <item>Moderate(exercise 4–5 times/week)</item>
        <item>Active(intense exercise 6–7 times/week)</item>
    </string-array>


    <string name="app_moto">Don\'t just count your calories, make your calories count!</string>


    <!--  Foodzie  -->
    <string name="api_key">934aae548ca0482fb60852753c5e5e25</string>
    <string name="height">HEIGHT:</string>

    <string-array name="tags">
        <item>Main course</item>
        <item>Side dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Marinade</item>
        <item>Fingerfood</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>


</resources>