<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5E8C7"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#F5E8C7"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="60dp"
                app:cardElevation="10dp"
                app:strokeColor="#aaa"
                app:strokeWidth="1dp">

                <ImageButton
                    android:id="@+id/btn_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#774E4E"
                    android:clickable="true"
                    android:contentDescription="Male"
                    android:focusable="true"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/male1"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></ImageButton>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#F5E8C7"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="60dp"
                app:cardElevation="10dp"
                app:strokeColor="#aaa"
                app:strokeWidth="1dp">

                <ImageButton
                    android:id="@+id/btn_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#774E4E"
                    android:clickable="true"
                    android:contentDescription="Male"
                    android:focusable="true"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/feamle1"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></ImageButton>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"></View>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round"
            android:hint="@string/string_age">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_filledText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round"
            android:hint="@string/string_weight">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField1ft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:hint="@string/height_in_ft">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightft_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField1in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/round"
                android:hint="@string/inches">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightin_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round"
                    android:inputType="numberDecimal"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <!--Create a TextInputLayout and choose the style,
        for now we are choosing the OutlinedBox ExposedDropdownMenu   -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/Activity_level" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout

            android:id="@+id/relativelayout"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <!--Recycler View widget-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="horizontal"
                android:windowSoftInputMode="adjustResize" />

        </RelativeLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/calculate"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>