<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D50000"
    >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/scales"
                android:layout_marginBottom="-10dp"
                android:layout_gravity="center"
                app:civ_border_width="3dp"
                app:civ_border_color="#FF000000"
                ></de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Result"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="50sp"
                android:padding="2dp"
                android:textAlignment="center">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/result_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    app:lottie_rawRes="@raw/gainweight"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true"
                    android:layout_marginBottom="5dp"
                    >

                </com.airbnb.lottie.LottieAnimationView>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF8A80"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/BMICalculate"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/googlesans_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/bmi"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/BMIStatus"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:fontFamily="@font/googlesans_medium"
                    android:text="Underweight"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>



            <TextView
                android:id="@+id/BMIAge"
                android:layout_margin="4dp"
                android:fontFamily="@font/googlesans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/BMIWeight"
                android:layout_margin="4dp"
                android:fontFamily="@font/googlesans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/BMIHeight"
                android:layout_margin="4dp"
                android:fontFamily="@font/googlesans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

            </TextView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/OK_btn"
                    android:layout_width="190dp"
                    app:elevation="20dp"
                    android:layout_margin="2dp"
                    android:layout_height="70dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    app:backgroundTint="#FF5B28"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_done_4"
                    android:text="Exit"
                    app:iconGravity="textStart"
                    android:textSize="20sp"
                    app:cornerRadius="80dp">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>



        </LinearLayout>

</ScrollView>